--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=restful-web-services
 # log level
 logging.level.org.springframework=info
+#actuator ??? (??? ?? ???? ?? API? ???)
+management.endpoints.web.exposure.include=*
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
